clang/test/CodeGen/KVX/too-many-nargs.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py
// RUN: %clang_cc1 -triple kvx-kalray-cos -S -verify %s

int xfail_avgw(int a, int b) {
  return __builtin_kvx_avgw(a, b, 1, ".ru"); // expected-error {{too many arguments to function call, expected 3, have 4}}
}
